# tokio-graceful-shutdown-rewrite

./: Cargo.toml  README.md  TODO.txt  Thoughts.txt
examples/: 01_normal_shutdown.rs  03_shutdown_timeout.rs  07_nested_error.rs  08_panic_handling.rs  12_subsystem_auto_restart.rs
src/: error_action.rs  errors.rs  guard.rs  joiner_token.rs  lib.rs  main copy.rs  main.rs  runner.rs  subsystem.rs  subsystem_handle.rs  toplevel.rs
src/runner/: alive_guard.rs
src/subsystem/: mod.rs  nested_subsystem.rs  subsystem_builder.rs  subsystem_handle.rs
src/utils/: joiner_token.rs  mod.rs  remote_drop_collection.rs
tests/: rewrite_tests.rs
