[package]
name = "tokio-graceful-shutdown-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37", default-features = false }

tokio = { version = "1.32.0", default-features = false, features = [
    "signal",
    "rt",
    "macros",
    "time",
] }
tokio-util = { version = "0.7.8", default-features = false }


[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
