[package]
name = "tokio-graceful-shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37", default-features = false }

tokio = { version = "1.32.0", default-features = false, features = [
    "signal",
    "rt",
    "macros",
    "time",
] }
tokio-util = { version = "0.7.8", default-features = false }

pin-project-lite = "0.2.13"
thiserror = "1.0.49"
miette = "5.10.0"
async-trait = "0.1.73"

[dev-dependencies]
anyhow = "1.0.75"
eyre = "0.6.8"
miette = { version = "5.10.0", features = ["fancy"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
